Replace passing round QModelIndexes with ContactModelItem* this fixes various crashes when using proxy models.

Reviewed by Martin Klapetek

BUG: 274148
BUG: 274160
REVIEW: 101448